[package]
name = "fimo_tasks_impl"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Implementation of the fimo tasks symbols"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies.fimo_std]
version = "0.1"
path = "../../rust/fimo_std"

[dependencies.fimo_tasks_meta]
version = "0.1"
path = "../../rust/fimo_tasks_meta"

[dependencies.context]
version = "3.0.0"

[dependencies.crossbeam-channel]
version = "0.5.13"

[dependencies.crossbeam-deque]
version = "0.8.5"

[dependencies.rustc-hash]
version = "2.0.0"
