[package]
name = "fimo_std"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Standard library of the fimo engine"
links = "fimo_std"

[lints]
workspace = true

[dependencies.paste]
version = "1.0.14"

[target.'cfg(any(unix, wasm))'.dependencies.libc]
version = "0.2.151"

[build-dependencies.zigcli]
version = "0.1.0"

[build-dependencies.bindgen]
version = "0.70.1"

[build-dependencies.doxygen-rs]
version = "0.4.2"
