[package]
name = "fimo_actix_interface"
version = "0.1.0"
edition = "2021"
description = "`fimo-actix` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.15"
fimo_ffi_core = { version = "0.1.0", path = "../fimo_ffi_core" }
fimo_module_core = { version = "0.1.0", path = "../fimo_module_core" }
fimo_version_core = { version = "0.1.0", path = "../fimo_version_core" }
fimo_core_interface = { version = "0.1.0", path = "../../utilities/fimo_core_interface" }
