[package]
name = "fimo_core_interface"
version = "0.1.0"
edition = "2018"
description = "`fimo-core` interface definition"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
static_assertions = "1.1.0"
fimo_ffi_core = { version = "0.1.0", path = "../fimo_ffi_core" }
fimo_module_core = { version = "0.1.0", path = "../fimo_module_core" }
fimo_version_core = { version = "0.1.0", path = "../fimo_version_core" }
