[package]
name = "fimo_ffi"
version = "0.1.0"
edition = "2021"
description = "Fimo ffi definitions"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
uuid = "1.0.0-alpha.1"
serde = { version = "1.0.123", features = ["derive"] }
fimo_version_core = { version = "0.1.0", path = "../fimo_version_core" }