[package]
name = "fimo_ffi"
version = "0.1.0"
edition = "2021"
description = "Fimo ffi definitions"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
uuid = "1.1.2"
regex = "1.4.3"
numtoa = "0.2.3"
serde = { version = "1.0.123", features = ["derive"] }
xxhash-rust = { version = "0.8.5", features = ["const_xxh3"] }
fimo_ffi_codegen = { version = "0.1.0", path = "../fimo_ffi_codegen" }
