[package]
name = "fimo_ffi_codegen"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Code generation crate for the fimo_ffi crate"
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
uuid = "0.8.2"
regex = "1.6.0"
quote = "1.0.0"
darling = "0.13.1"
proc-macro2 = "1.0.36"
syn = { version = "1.0", features = ["full"] }
